--- a/package.json
+++ b/package.json
@@ -18,6 +18,12 @@
   },
   "homepage": "https://github.com/zapproject/zap-miner#readme",
   "devDependencies": {
-    "hardhat": "^2.2.0"
+    "@types/chai": "^4.2.16",
+    "@types/mocha": "^8.2.2",
+    "@types/node": "^14.14.41",
+    "chai": "^4.3.4",
+    "hardhat": "^2.2.0",
+    "ts-node": "^9.1.1",
+    "typescript": "^4.2.4"
   }
 }
