--- a/package.json
+++ b/package.json
@@ -25,5 +25,10 @@
     "hardhat": "^2.2.0",
     "ts-node": "^9.1.1",
     "typescript": "^4.2.4"
+  },
+  "dependencies": {
+    "hardhat-typechain": "^0.3.5",
+    "ts-generator": "^0.1.1",
+    "typechain": "^4.0.3"
   }
 }
