--- a/package.json
+++ b/package.json
@@ -18,15 +18,19 @@
   },
   "homepage": "https://github.com/zapproject/zap-miner#readme",
   "devDependencies": {
+    "@nomiclabs/hardhat-ethers": "^2.0.2",
     "@types/chai": "^4.2.16",
     "@types/mocha": "^8.2.2",
     "@types/node": "^14.14.41",
     "chai": "^4.3.4",
+    "ethers": "^5.1.3",
     "hardhat": "^2.2.0",
     "ts-node": "^9.1.1",
     "typescript": "^4.2.4"
   },
   "dependencies": {
+    "@typechain/ethers-v5": "^6.0.5",
+    "hardhat-deploy": "^0.7.5",
     "hardhat-typechain": "^0.3.5",
     "ts-generator": "^0.1.1",
     "typechain": "^4.0.3"
