--- a/hardhat/package.json
+++ b/hardhat/package.json
@@ -26,7 +26,7 @@
     "ethers": "^5.1.3",
     "hardhat": "^2.2.0",
     "ts-node": "^9.1.1",
-    "typescript": "^4.2.4",
+    "typescript": "^4.2.4"
   },
   "dependencies": {
     "@typechain/ethers-v5": "^6.0.5",
