Functional Dispute commands

--- a/config.json
+++ b/config.json
@@ -21,6 +21,6 @@
         "newCurrentVariables",
         "currentVariables"
     ],
-    "indexFolder": "./indexes",
+    "indexFolder": "indexes",
     "dbFile": "zapDB"
 }
