--- a/.gitignore
+++ b/.gitignore
@@ -46,6 +46,9 @@ pkg/darwin_amd64
 # Output of the go coverage tool, specifically when used with LiteIDE
 *.out
 
+# Generated txt files pertaining to possible dispute warning logs
+*possible-dispute-*
+
 /myconfig.json
 */myconfig.json
 /myconfig2.json
