--- a/hardhat/package.json
+++ b/hardhat/package.json
@@ -30,9 +30,9 @@
     "chai": "^4.3.4",
     "ethers": "^5.1.3",
     "hardhat": "^2.2.0",
+    "hardhat-deploy-ethers": "^0.3.0-beta.7",
     "ts-node": "^9.1.1",
-    "typescript": "^4.2.4",
-    "hardhat-deploy-ethers": "^0.3.0-beta.7"
+    "typescript": "^4.2.4"
   },
   "dependencies": {
     "@typechain/ethers-v5": "^6.0.5",
